# src/api/RoleRouter.ts
@@ -8,6 +8,38 @@ import { logger } from '../config/logger/logger';
 const router: Router = Router();
 
 /**
+ * GET method route
+ * @example http://localhost:PORT/roles
+ * @swagger
+ * /roles/:
+ *  get:
+ *    description: Get all Roles
+ *    tags: ["Roles"]
+ *    responses:
+ *      200:
+ *        description: All Roles
+ *        content:
+ *          appication/json:
+ *            schema:
+ *              $ref: '#/components/schemas/RoleTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/RoleTo'
+ * components:
+ *   schemas:
+ *     RoleTo:
+ *       type: object
+ *       properties:
+ *         name:
+ *              type: string
+ *              example: Admin
+ */
+router.get("", RoleFacade.findAll);
+
+/**
  * POST method route
  * @example http://localhost:PORT/roles
  * @swagger
